# CrewAI-Q-and-A-System

./: .gitignore  README.md  pyproject.toml  requirements.txt  template.py
app/: main.py
app/agents/: agents.py
app/crew/: crew.py
app/tasks/: tasks.py
frontend/: streamlit_app.py
