[project]
name = "crewai-q-and-a-system"
version = "0.1.0"
description = "This agent crew will help users to answer there question searching through web also filter explicity and self harming questions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai",
    "crewai-tools",
    "fastapi",
    "openai>=1.75.0",
    "pydantic",
    "python-dotenv",
    "requests",
    "streamlit",
    "uvicorn[standard]",
]
